# ChangeLog for media-video/totem
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/totem/ChangeLog,v 1.155 2007/03/27 22:07:07 dang Exp $

*totem-2.18.0 (27 Mar 2007)

  27 Mar 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/totem-2.17.5-browser-plugins.patch, +totem-2.18.0.ebuild:
  gnome 2.18.0

*totem-2.16.5 (26 Feb 2007)

  26 Feb 2007; Luis Medinas <metalgod@gentoo.org> +totem-2.16.5.ebuild:
  Version Bump. Bug fix release. Closes bug #167135.

  21 Feb 2007; Roy Marples <uberlord@gentoo.org> totem-2.16.4.ebuild:
  Add ~x86-fbsd keyword.

  04 Feb 2007; Markus Rothe <corsair@gentoo.org> totem-2.16.4.ebuild:
  Stable on ppc64; bug #164978

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> totem-2.16.4.ebuild:
  Stable on IA64, bug 156662.

  19 Jan 2007; Jeroen Roovers <jer@gentoo.org> totem-2.16.4.ebuild:
  Stable for HPPA (bug #147751).

  14 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> totem-2.16.4.ebuild:
  Stable on Alpha.

  10 Jan 2007; Mart Raudsepp <leio@gentoo.org> -totem-2.16.2-r1.ebuild,
  -totem-2.16.3.ebuild:
  Prune old versions

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> totem-1.2.1-r1.ebuild,
  totem-1.4.2-r1.ebuild, totem-2.16.2-r1.ebuild, totem-2.16.3.ebuild,
  totem-2.16.4.ebuild:
  Convert to use elog.

  22 Dec 2006; Tony Vroon <chainsaw@gentoo.org> totem-2.16.2-r1.ebuild,
  totem-2.16.3.ebuild, totem-2.16.4.ebuild:
  Remove explicit seamonkey depend for PPC64, we can use firefox these days.

  20 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org> totem-2.16.4.ebuild:
  Add xf86vidmodeproto to the dep as per bug #158675, thanks to wolf31o2 for
  noticing it

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> totem-2.16.4.ebuild:
  Stable on sparc

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> totem-2.16.4.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> totem-2.16.4.ebuild: