@@ -42,22 +42,22 @@ EBUILD totem-1.4.2-r1.ebuild 4142 RMD160 0506e1cc355d65233fa3e9b67c3392312bbbfb4
 MD5 322981a56dcb29bc157e918d7047b69b totem-1.4.2-r1.ebuild 4142
 RMD160 0506e1cc355d65233fa3e9b67c3392312bbbfb4d totem-1.4.2-r1.ebuild 4142
 SHA256 af923c4bb45428ca00ff7574d3d29b64082dcefced3edade72b991cea85f30d1 totem-1.4.2-r1.ebuild 4142
-EBUILD totem-2.16.4.ebuild 4570 RMD160 efb42771fabd12d061b2311d72ac33d6d0f23a3d SHA1 be4242bb6b911a57a60584649cd8aa2df79f7048 SHA256 46e9e4dde8211d0c6151e48c094ff51e6612d93afab07b3118fd86ce15b43496
-MD5 9a6a809750d57a236f51f4d5e67c8bc1 totem-2.16.4.ebuild 4570
-RMD160 efb42771fabd12d061b2311d72ac33d6d0f23a3d totem-2.16.4.ebuild 4570
-SHA256 46e9e4dde8211d0c6151e48c094ff51e6612d93afab07b3118fd86ce15b43496 totem-2.16.4.ebuild 4570
-EBUILD totem-2.16.5.ebuild 4579 RMD160 13692eb963c84ff25f3a727ab6dea2de468e670d SHA1 7f4881ce94266d72b5437cb5dd51e8f560f4e0c2 SHA256 3169dfa03f84b531585ae61d330e5e4ece820e8780406eef6b3704c98e0a5370
-MD5 6462f3af68530db2438c30fda6e0d78a totem-2.16.5.ebuild 4579
-RMD160 13692eb963c84ff25f3a727ab6dea2de468e670d totem-2.16.5.ebuild 4579
-SHA256 3169dfa03f84b531585ae61d330e5e4ece820e8780406eef6b3704c98e0a5370 totem-2.16.5.ebuild 4579
+EBUILD totem-2.16.4.ebuild 4594 RMD160 d7159c9ec78ad1a975df72ed3b72025b58d7047e SHA1 b3c2cbd4b54331cd3b462009545884193a151c77 SHA256 2a638943b455f8884b8667268ea264ebf263f6f4f74df941660b47db221016ab
+MD5 d96b05bd257f2b70d5eb2a30a2e928ba totem-2.16.4.ebuild 4594
+RMD160 d7159c9ec78ad1a975df72ed3b72025b58d7047e totem-2.16.4.ebuild 4594
+SHA256 2a638943b455f8884b8667268ea264ebf263f6f4f74df941660b47db221016ab totem-2.16.4.ebuild 4594
+EBUILD totem-2.16.5.ebuild 4603 RMD160 632890c61f330bd912156b00b59ec1ace539445e SHA1 aaf0d48342944ad989f6b8d61b10175333605adf SHA256 bf9498964171fe31beeda7db9d5a5164c7afb1b0b45b6c0a9ba70385e92d776b
+MD5 bb8f6d74ce3a6d8581c6ed1481e8d896 totem-2.16.5.ebuild 4603
+RMD160 632890c61f330bd912156b00b59ec1ace539445e totem-2.16.5.ebuild 4603
+SHA256 bf9498964171fe31beeda7db9d5a5164c7afb1b0b45b6c0a9ba70385e92d776b totem-2.16.5.ebuild 4603
 EBUILD totem-2.18.0.ebuild 4382 RMD160 2f3b8c8960a718edef4646be8201567579b45852 SHA1 4e31473edf83a91c1dfe5f13c5d2808240bfcc55 SHA256 c9ea39e79595ea13fa25055f65126ca8f55e0fcb4716dee671522aa92b2742c6
 MD5 c4de0802e3a4a7cd74672778b33b2e23 totem-2.18.0.ebuild 4382
 RMD160 2f3b8c8960a718edef4646be8201567579b45852 totem-2.18.0.ebuild 4382
 SHA256 c9ea39e79595ea13fa25055f65126ca8f55e0fcb4716dee671522aa92b2742c6 totem-2.18.0.ebuild 4382
-MISC ChangeLog 21547 RMD160 55b2b005f17adf04d95e9fe04dffbe7ec51020cd SHA1 2f803af18d294c1868bd943403364fe78d59be65 SHA256 1125bdfc2cb8250a0b48dc4d5b96d97a3497350d9ead6203d632a322d9d09688
-MD5 1923743892bf8538384d9cffc6b182a9 ChangeLog 21547
-RMD160 55b2b005f17adf04d95e9fe04dffbe7ec51020cd ChangeLog 21547
-SHA256 1125bdfc2cb8250a0b48dc4d5b96d97a3497350d9ead6203d632a322d9d09688 ChangeLog 21547
+MISC ChangeLog 21713 RMD160 511bf1985a219e70b49efaad8a91f0ee2d41ef5a SHA1 1195681c42a6a9d1f3f0af4d9cf55e021801053e SHA256 efe99682ed8525e04923ad99c4ed5ccd2c314d3cc5e966e419f5f51e96fbfc3a
+MD5 597bce7ae25f5fbb1bcf70e0831ec573 ChangeLog 21713
+RMD160 511bf1985a219e70b49efaad8a91f0ee2d41ef5a ChangeLog 21713
+SHA256 efe99682ed8525e04923ad99c4ed5ccd2c314d3cc5e966e419f5f51e96fbfc3a ChangeLog 21713
 MISC metadata.xml 521 RMD160 d715631cdb935e3f1cfc70e88d8dfbd10ae3159c SHA1 cbf35cd1be8178679cc8dc62463fedb4a11042f9 SHA256 67adda7ef1db1c932df3f4a03186d86119e9c26c96f2c17d554150dc133f6197
 MD5 74b9bd3cc5015b286abc33eb51408252 metadata.xml 521
 RMD160 d715631cdb935e3f1cfc70e88d8dfbd10ae3159c metadata.xml 521
@@ -80,7 +80,7 @@ SHA256 1d28e0cbdf0f7019f998ad9205b3da055c98a9f7d23e6280921c0f6fbccd1d6b files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.3 (GNU/Linux)
 
-iD8DBQFGCZUmomPajV0RnrERApnaAJ0S+mC9sYF4KaBuPClSBgAUbfc8MACfbSz1
-zNnzFJKpZGxdB9pEQU+2WDk=
-=nczt
+iD8DBQFGI7EEomPajV0RnrERAlolAJ9MfRreR6IIohQTYRq12unYkxF31wCeKB+z
+2QQQL/UMEjUJVBgnyyiO5Ho=
+=pdOa
 -----END PGP SIGNATURE-----
